# retriever.sh

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LOGFIRE.md  PRODUCTION-QUICKSTART.md  README.md  build-and-upload.sh  docker-compose.override.yml  docker-compose.yml  marketing.md  nginx.conf  retriever.service  setup-production.sh  update-deployment.sh
backend/: openapi.json  pyproject.toml
backend/alembic/versions/: 0001_init.py  0002_account_plan_structures.py  0003_postgres_vector_store.py  0004_add_email_verification.py  0004_remove_vector_topups.py  0005_add_active_columns.py  0006_remove_account_tables.py  0007_per_project_vector_limits.py  0008_add_project_documents.py  0009_project_uuid_ids.py  0010_document_metadata.py  0011_project_document_metadata_guard.py  0012_add_project_images.py  0013_text_only_denseon_cutover.py  0014_remote_embedding_server_cutover.py  0014_remote_embeddings.py  0015_multimodal_rag_api.py  0015_omni_multimodal_api.py  0016_bearer_api_keys.py  b9a2dfa6460d_merge_vector_store_and_polar_migrations.py
backend/app/: config.py  logging_config.py  main.py
backend/app/database/: __init__.py  models.py  shared.py
backend/app/functions/: accounts.py  api_keys.py  backups.py  billing.py  plan_seeding.py  rate_limits.py
backend/app/pages/: billing.py  (+4 more)
backend/tests/: conftest.py  test_billing.py  test_matryoshka_embeddings.py  test_rag_image_api.py  test_rate_limits.py  test_remote_embeddings.py  test_siglip2_embeddings.py  test_vespa_image_store.py  test_vespa_rag.py  test_vespa_store_yql.py
(+57 files in other folders)
